move most of the styles from the header to a separate beisansystems.css file to increase overall performance due to caching

--- a/de/forum.html
+++ b/de/forum.html
@@ -1,78 +1,82 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/main_german.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE html
+  PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<!-- InstanceBegin template="/Templates/main_german.dwt" codeOutsideHTMLIsLocked="false" -->
 
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>Beisan Systems - Forum</title>
-<!-- InstanceEndEditable -->
-<!-- InstanceBeginEditable name="head" -->
-<!-- InstanceEndEditable -->
-<style type="text/css">
-<!--
-.style16 {color: #FFFFFF}
-.style20 {
-	font-size: 30px;
-	font-style: italic;
-}
-a:link {
-	text-decoration: none;
-}
-a:visited {
-	text-decoration: none;
-}
-a:hover {
-	text-decoration: underline;
-}
-a:active {
-	text-decoration: none;
-}
-.style23 {color: #FFFFFF; font-size: 46px;}
--->
-</style>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- InstanceBeginEditable name="doctitle" -->
+  <title>Beisan Systems - Forum</title>
+  <!-- InstanceEndEditable -->
+  <!-- InstanceBeginEditable name="head" -->
+  <!-- InstanceEndEditable -->
+  <link rel="stylesheet" href="beisan.css">
 </head>
 
 <body>
-<div align="center">
-  <table width="800" height="100" border="0" bordercolor="#FFFFFF" background="../images/page_header.jpg">
-    <tr>
-      <td> </td>
-    </tr>
-  </table>
-  <table width="800" border="1" bgcolor="#669999">
-    <tr>
-      <td width="100"><div align="center"><a href="index.html" class="style16">Home</a></div></td>
-      <td width="100"><div align="center"><a href="produkte.html" class="style16">Produkte</a></div></td>
-      <td width="100"><div align="center"><a href="anleitungen/index.html" class="style16">Anleitungen</a></div></td>
-      <td width="100"><div align="center"><a href="referenzen.html" class="style16">Referenzen</a></div></td>
-      <td width="100"><div align="center"><a href="faq.html" class="style16">FAQ</a></div></td>
-      <td width="100"><div align="center"><a href="forum.html" class="style16">Forum</a></div></td>
-      <td width="100"><div align="center"><a href="kontakt.html" class="style16">Kontakt</a></div></td>
-      <td width="100"><div align="center"><a href="../index.html" class="style16">English</a></div></td>
-    </tr>
-  </table>
-  <table width="800" height="25" border="0" bgcolor="#FFFFFF">
-    <tr>
-      <td>&nbsp;</td>
-    </tr>
-  </table>
-  <table width="800" border="0" bgcolor="#FFFFFF">
-    <tr>
-      <td width="800"><!-- InstanceBeginEditable name="pagecontent" -->
-        <div align="center">
-          <h1>Forum</h1>
-          <p align="left">&nbsp;</p>
-          <p align="left">&nbsp;</p>
-        </div>
-      <!-- InstanceEndEditable --></td>
-    </tr>
-  </table>
-  <table width="800" border="0" bgcolor="#FFFFFF">
-    <tr>
-      <td><div align="center">&copy; Copyright 2022 Beisan Systems, LLC</div></td>
-    </tr>
-  </table>
-</div>
+  <div align="center">
+    <table width="800" height="100" border="0" bordercolor="#FFFFFF" background="../images/page_header.jpg">
+      <tr>
+        <td> </td>
+      </tr>
+    </table>
+    <table width="800" border="1" bgcolor="#669999">
+      <tr>
+        <td width="100">
+          <div align="center"><a href="index.html" class="style16">Home</a></div>
+        </td>
+        <td width="100">
+          <div align="center"><a href="produkte.html" class="style16">Produkte</a></div>
+        </td>
+        <td width="100">
+          <div align="center"><a href="anleitungen/index.html" class="style16">Anleitungen</a></div>
+        </td>
+        <td width="100">
+          <div align="center"><a href="referenzen.html" class="style16">Referenzen</a></div>
+        </td>
+        <td width="100">
+          <div align="center"><a href="faq.html" class="style16">FAQ</a></div>
+        </td>
+        <td width="100">
+          <div align="center"><a href="forum.html" class="style16">Forum</a></div>
+        </td>
+        <td width="100">
+          <div align="center"><a href="kontakt.html" class="style16">Kontakt</a></div>
+        </td>
+        <td width="100">
+          <div align="center"><a href="../index.html" class="style16">English</a></div>
+        </td>
+      </tr>
+    </table>
+    <table width="800" height="25" border="0" bgcolor="#FFFFFF">
+      <tr>
+        <td>&nbsp;</td>
+      </tr>
+    </table>
+    <table width="800" border="0" bgcolor="#FFFFFF">
+      <tr>
+        <td width="800">
+          <!-- InstanceBeginEditable name="pagecontent" -->
+          <div align="center">
+            <h1>Forum</h1>
+            <p align="left">&nbsp;</p>
+            <p align="left">&nbsp;</p>
+          </div>
+          <!-- InstanceEndEditable -->
+        </td>
+      </tr>
+    </table>
+    <table width="800" border="0" bgcolor="#FFFFFF">
+      <tr>
+        <td>
+          <div align="center">&copy; Copyright 2022 Beisan Systems, LLC</div>
+        </td>
+      </tr>
+    </table>
+  </div>
 </body>
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+
+</html>
