--- a/de/index.html
+++ b/de/index.html
@@ -1,98 +1,126 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/main_german.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE html
+  PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<!-- InstanceBegin template="/Templates/main_german.dwt" codeOutsideHTMLIsLocked="false" -->
 
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>Beisan Systems</title>
-<!-- InstanceEndEditable -->
-<!-- InstanceBeginEditable name="head" -->
-<!-- InstanceEndEditable -->
-<style type="text/css">
-<!--
-.style16 {color: #FFFFFF}
-.style20 {
-	font-size: 30px;
-	font-style: italic;
-}
-a:link {
-	text-decoration: none;
-}
-a:visited {
-	text-decoration: none;
-}
-a:hover {
-	text-decoration: underline;
-}
-a:active {
-	text-decoration: none;
-}
-.style23 {color: #FFFFFF; font-size: 46px;}
--->
-</style>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- InstanceBeginEditable name="doctitle" -->
+  <title>Beisan Systems</title>
+  <!-- InstanceEndEditable -->
+  <!-- InstanceBeginEditable name="head" -->
+  <!-- InstanceEndEditable -->
+  <link rel="stylesheet" href="beisan.css">
 </head>
 
 <body>
-<div align="center">
-  <table width="800" height="100" border="0" bordercolor="#FFFFFF" background="../images/page_header.jpg">
-    <tr>
-      <td> </td>
-    </tr>
-  </table>
-  <table width="800" border="1" bgcolor="#669999">
-    <tr>
-      <td width="100"><div align="center"><a href="index.html" class="style16">Home</a></div></td>
-      <td width="100"><div align="center"><a href="produkte.html" class="style16">Produkte</a></div></td>
-      <td width="100"><div align="center"><a href="anleitungen/index.html" class="style16">Anleitungen</a></div></td>
-      <td width="100"><div align="center"><a href="referenzen.html" class="style16">Referenzen</a></div></td>
-      <td width="100"><div align="center"><a href="faq.html" class="style16">FAQ</a></div></td>
-      <td width="100"><div align="center"><a href="forum.html" class="style16">Forum</a></div></td>
-      <td width="100"><div align="center"><a href="kontakt.html" class="style16">Kontakt</a></div></td>
-      <td width="100"><div align="center"><a href="../index.html" class="style16">English</a></div></td>
-    </tr>
-  </table>
-  <table width="800" height="25" border="0" bgcolor="#FFFFFF">
-    <tr>
-      <td>&nbsp;</td>
-    </tr>
-  </table>
-  <table width="800" border="0" bgcolor="#FFFFFF">
-    <tr>
-      <td width="800"><!-- InstanceBeginEditable name="pagecontent" -->
-        <h2 align="center">L&ouml;sung des Vanos Dichtring  Problems des BMW 6-Zylinders</h2>
-        <p align="left">          Besitzen Sie eines der unten aufgef&uuml;hrten BMW  6-Zylinder Fahrzeuge, MJ 1993-2006? Wenn ja, dann ist Ihr Vanos, Einheit zur  variablen Nockenwellen Steuerung, in den meisten F&auml;llen defekt. Es wurde immer  wieder festgestellt, dass die Vanos-Einheit wegen Verschlei&szlig; der Kolbenringe  (O-Ringe) ausf&auml;llt. Diese O-Ringe sind aus einem Material das den Bedingungen  im Motor nicht standh&auml;lt. Dies f&uuml;hrt dazu, dass die Vanos-Kolbenringe nicht  mehr dichten k&ouml;nnen und die Vanos-Einheit ausf&auml;llt.<br />
-          <br />
-          BMW bietet Dichtringe des Vanos nicht separat an. Es ist nur die Austauscheinheit  f&uuml;r ca.420&euro; erh&auml;ltlich. An diesen Austauscheinheiten sind aber O-Ringe aus dem  gleichen Material wie an den originalen Einheiten verbaut. Diese Austausch  Vanos-Einheiten beginnen erfahrungsgem&auml;&szlig; nach ca.30tkm wieder ihre Funktion zu  verlieren.<br />
-          <br />
-          Hier bei Beisan Systems gibt es nun Vanos Dichtring Reparaturs&auml;tze. Diese  beinhalten verbesserte O-Ringe zur Behebung des Ausfalls der Vanos-Einheiten  und Ersatz Teflon-Kolbenringe.<br />
-          <br />
-          <u>Fehlerbilder bei Vanos-Defekt<br />
-          </u>Verlust von Drehmoment und Leistung, vor allem im unteren Drehzahlbereich, &lt;  3000 1/min. Ein H&auml;ngenbleiben und dann Losrei&szlig;en des Motors bei 3000 1/min. Ungleichf&ouml;rmiger  Leistungsverlauf und Drehzahlschwankungen. Stocken des Motors bei niedriger  Drehzahl, &lt; 3000 1/min. Unruhiger lauter Leerlauf mit periodischem Drehzahl  &bdquo;Schluckauf&ldquo;. Schlechtes Anfahrverhalten. Leistungsverlust und rucken, wenn die  Klimaanlage angeschaltet wird. Erh&ouml;hter Kraftstoffverbrauch. Vanos bedingte  Fehlereintr&auml;ge.<br />
-          Doppel-Vanos Fahrzeuge mit den M52TU Motoren (MJ 98/99-00) haben bei kalten Temperaturen  nach Kaltstart im Leerlauf Drehzahleinbr&uuml;che bis hin zum Motorabsterben.<br />
-          <br />
-          <u>Vorteile des Austauschs der Vanos Dichtringe<br />
-          </u>Ein Anstieg von Drehmoment und Leistung in allen Bereichen, vor allem in  dem unteren Drehzahlbereich &lt; 3000 1/min. Beseitigen des H&auml;ngenbleibens und  dann Losrei&szlig;en bei 3000 1/min. Gleichm&auml;&szlig;igerer Leistungsverlauf und ruhiger  Drehzahlverlauf in allen Bereichen. Beseitigen des Stocken des Motors bei  niedriger Drehzahl, &lt; 3000 1/min. Sehr ruhiger und stabiler Leerlauf.  Sanftes kraftvolleres Anfahrverhalten. Besseres Verhalten beim Klimaanlage anschalten.  Um bis zu 10% verringerter Kraftstoffverbrauch. Keine vom VANOS verursachten  Fehlercodes mehr.<br />
-          Beseitigung der Drehzahleinbr&uuml;che bis hin zum Motorabsterben bei kalten  Temperaturen nach Kaltstart im Leerlauf bei Doppel Vanos Fahrzeugen mit den  M52TU Motoren (MJ 98/99-00).<br />
-          <br />
-          <u>Vom Vanos Dichtring Ausfall betroffen Fahrzeuge</u><br />
-          <br />
-          <u>Einfach-Vanos</u><br />
-          BMW 6-Zylinder Motoren M50TU, M52, US S50, S52, 1992-1999 <br />
-          3er Serie E36 93-97, 5er Serie E34 93-95 / E39 96-98, 7er Serie E38 95-98, Z3  Roadster 2.8 E36 96-98, EU Z3 Coupe 2.8 E36 96-98, US M3 E36 94-99, US Z3 M E36  98-99<br />
-          <br />
-          <u>Doppel-Vanos</u><br />
-          BMW 6-Zylinder Motoren M52TU, M54, M56, 1998-2006<br />
-        3er Serie E46 98-05, 5er Serie E39 99-03 / E60 und E61 02-05, 7er Serie E38  98-01 / E65 und E66 02-05, Z3 E36 98-02, Z4 E85 02-05, X3 E83 03-06, X5 E53  00-06</p>
-        <p align="left">&nbsp;</p>
-      <!-- InstanceEndEditable --></td>
-    </tr>
-  </table>
-  <table width="800" border="0" bgcolor="#FFFFFF">
-    <tr>
-      <td><div align="center">&copy; Copyright 2022 Beisan Systems, LLC</div></td>
-    </tr>
-  </table>
-</div>
+  <div align="center">
+    <table width="800" height="100" border="0" bordercolor="#FFFFFF" background="../images/page_header.jpg">
+      <tr>
+        <td> </td>
+      </tr>
+    </table>
+    <table width="800" border="1" bgcolor="#669999">
+      <tr>
+        <td width="100">
+          <div align="center"><a href="index.html" class="style16">Home</a></div>
+        </td>
+        <td width="100">
+          <div align="center"><a href="produkte.html" class="style16">Produkte</a></div>
+        </td>
+        <td width="100">
+          <div align="center"><a href="anleitungen/index.html" class="style16">Anleitungen</a></div>
+        </td>
+        <td width="100">
+          <div align="center"><a href="referenzen.html" class="style16">Referenzen</a></div>
+        </td>
+        <td width="100">
+          <div align="center"><a href="faq.html" class="style16">FAQ</a></div>
+        </td>
+        <td width="100">
+          <div align="center"><a href="forum.html" class="style16">Forum</a></div>
+        </td>
+        <td width="100">
+          <div align="center"><a href="kontakt.html" class="style16">Kontakt</a></div>
+        </td>
+        <td width="100">
+          <div align="center"><a href="../index.html" class="style16">English</a></div>
+        </td>
+      </tr>
+    </table>
+    <table width="800" height="25" border="0" bgcolor="#FFFFFF">
+      <tr>
+        <td>&nbsp;</td>
+      </tr>
+    </table>
+    <table width="800" border="0" bgcolor="#FFFFFF">
+      <tr>
+        <td width="800">
+          <!-- InstanceBeginEditable name="pagecontent" -->
+          <h2 align="center">L&ouml;sung des Vanos Dichtring Problems des BMW 6-Zylinders</h2>
+          <p align="left"> Besitzen Sie eines der unten aufgef&uuml;hrten BMW 6-Zylinder Fahrzeuge, MJ 1993-2006? Wenn
+            ja, dann ist Ihr Vanos, Einheit zur variablen Nockenwellen Steuerung, in den meisten F&auml;llen defekt. Es
+            wurde immer wieder festgestellt, dass die Vanos-Einheit wegen Verschlei&szlig; der Kolbenringe (O-Ringe)
+            ausf&auml;llt. Diese O-Ringe sind aus einem Material das den Bedingungen im Motor nicht standh&auml;lt. Dies
+            f&uuml;hrt dazu, dass die Vanos-Kolbenringe nicht mehr dichten k&ouml;nnen und die Vanos-Einheit
+            ausf&auml;llt.<br />
+            <br />
+            BMW bietet Dichtringe des Vanos nicht separat an. Es ist nur die Austauscheinheit f&uuml;r ca.420&euro;
+            erh&auml;ltlich. An diesen Austauscheinheiten sind aber O-Ringe aus dem gleichen Material wie an den
+            originalen Einheiten verbaut. Diese Austausch Vanos-Einheiten beginnen erfahrungsgem&auml;&szlig; nach
+            ca.30tkm wieder ihre Funktion zu verlieren.<br />
+            <br />
+            Hier bei Beisan Systems gibt es nun Vanos Dichtring Reparaturs&auml;tze. Diese beinhalten verbesserte
+            O-Ringe zur Behebung des Ausfalls der Vanos-Einheiten und Ersatz Teflon-Kolbenringe.<br />
+            <br />
+            <u>Fehlerbilder bei Vanos-Defekt<br />
+            </u>Verlust von Drehmoment und Leistung, vor allem im unteren Drehzahlbereich, &lt; 3000 1/min. Ein
+            H&auml;ngenbleiben und dann Losrei&szlig;en des Motors bei 3000 1/min. Ungleichf&ouml;rmiger
+            Leistungsverlauf und Drehzahlschwankungen. Stocken des Motors bei niedriger Drehzahl, &lt; 3000 1/min.
+            Unruhiger lauter Leerlauf mit periodischem Drehzahl &bdquo;Schluckauf&ldquo;. Schlechtes Anfahrverhalten.
+            Leistungsverlust und rucken, wenn die Klimaanlage angeschaltet wird. Erh&ouml;hter Kraftstoffverbrauch.
+            Vanos bedingte Fehlereintr&auml;ge.<br />
+            Doppel-Vanos Fahrzeuge mit den M52TU Motoren (MJ 98/99-00) haben bei kalten Temperaturen nach Kaltstart im
+            Leerlauf Drehzahleinbr&uuml;che bis hin zum Motorabsterben.<br />
+            <br />
+            <u>Vorteile des Austauschs der Vanos Dichtringe<br />
+            </u>Ein Anstieg von Drehmoment und Leistung in allen Bereichen, vor allem in dem unteren Drehzahlbereich
+            &lt; 3000 1/min. Beseitigen des H&auml;ngenbleibens und dann Losrei&szlig;en bei 3000 1/min.
+            Gleichm&auml;&szlig;igerer Leistungsverlauf und ruhiger Drehzahlverlauf in allen Bereichen. Beseitigen des
+            Stocken des Motors bei niedriger Drehzahl, &lt; 3000 1/min. Sehr ruhiger und stabiler Leerlauf. Sanftes
+            kraftvolleres Anfahrverhalten. Besseres Verhalten beim Klimaanlage anschalten. Um bis zu 10% verringerter
+            Kraftstoffverbrauch. Keine vom VANOS verursachten Fehlercodes mehr.<br />
+            Beseitigung der Drehzahleinbr&uuml;che bis hin zum Motorabsterben bei kalten Temperaturen nach Kaltstart im
+            Leerlauf bei Doppel Vanos Fahrzeugen mit den M52TU Motoren (MJ 98/99-00).<br />
+            <br />
+            <u>Vom Vanos Dichtring Ausfall betroffen Fahrzeuge</u><br />
+            <br />
+            <u>Einfach-Vanos</u><br />
+            BMW 6-Zylinder Motoren M50TU, M52, US S50, S52, 1992-1999 <br />
+            3er Serie E36 93-97, 5er Serie E34 93-95 / E39 96-98, 7er Serie E38 95-98, Z3 Roadster 2.8 E36 96-98, EU Z3
+            Coupe 2.8 E36 96-98, US M3 E36 94-99, US Z3 M E36 98-99<br />
+            <br />
+            <u>Doppel-Vanos</u><br />
+            BMW 6-Zylinder Motoren M52TU, M54, M56, 1998-2006<br />
+            3er Serie E46 98-05, 5er Serie E39 99-03 / E60 und E61 02-05, 7er Serie E38 98-01 / E65 und E66 02-05, Z3
+            E36 98-02, Z4 E85 02-05, X3 E83 03-06, X5 E53 00-06
+          </p>
+          <p align="left">&nbsp;</p>
+          <!-- InstanceEndEditable -->
+        </td>
+      </tr>
+    </table>
+    <table width="800" border="0" bgcolor="#FFFFFF">
+      <tr>
+        <td>
+          <div align="center">&copy; Copyright 2022 Beisan Systems, LLC</div>
+        </td>
+      </tr>
+    </table>
+  </div>
 </body>
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+
+</html>
