--- a/de/kontakt.html
+++ b/de/kontakt.html
@@ -9,28 +9,7 @@
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
-<style type="text/css">
-<!--
-.style16 {color: #FFFFFF}
-.style20 {
-	font-size: 30px;
-	font-style: italic;
-}
-a:link {
-	text-decoration: none;
-}
-a:visited {
-	text-decoration: none;
-}
-a:hover {
-	text-decoration: underline;
-}
-a:active {
-	text-decoration: none;
-}
-.style23 {color: #FFFFFF; font-size: 46px;}
--->
-</style>
+  <link rel="stylesheet" href="beisan.css">
 </head>
 
 <body>
