--- a/faq.html
+++ b/faq.html
@@ -1,113 +1,151 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/main.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<link rel="shortcut icon" href="/favicon.ico">
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE html
+  PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<!-- InstanceBegin template="/Templates/main.dwt" codeOutsideHTMLIsLocked="false" -->
 
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>Beisan Systems - FAQ</title>
-<!-- InstanceEndEditable -->
-<!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
-<style type="text/css">
-<!--
-.style16 {color: #FFFFFF}
-.style20 {
-	font-size: 30px;
-	font-style: italic;
-}
-a:link {
-	text-decoration: none;
-}
-a:visited {
-	text-decoration: none;
-}
-a:hover {
-	text-decoration: underline;
-}
-a:active {
-	text-decoration: none;
-}
-.style23 {color: #FFFFFF; font-size: 46px;}
--->
-</style>
+<head>
+  <link rel="shortcut icon" href="/favicon.ico">
+  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- InstanceBeginEditable name="doctitle" -->
+  <title>Beisan Systems - FAQ</title>
+  
+
+  <link rel="stylesheet" href="beisan.css">
 </head>
 
 <body>
-<div align="center">
-  <table width="800" height="100" border="0" bordercolor="#FFFFFF" background="images/page_header.jpg">
-    <tr>
-      <td> </td>
-    </tr>
-  </table>
-  <table width="800" border="1" bgcolor="#669999">
-    <tr>
-      <td width="100"><div align="center"><a href="index.html" class="style16">Home</a></div></td>
-      <td width="100"><div align="center"><a href="products.html" class="style16">Products</a></div></td>
-      <td width="100"><div align="center"><a href="procedures/index.html" class="style16">Procedures</a></div></td>
-      <td width="100"><div align="center"><a href="testimonials.html" class="style16">Testimonials</a></div></td>
-      <td width="100"><div align="center"><a href="faq.html" class="style16">FAQ</a></div></td>
-      <td width="100"><div align="center"><a href="forum.html" class="style16">Forum</a></div></td>
-      <td width="100"><div align="center"><a href="contact.html" class="style16">Contact</a></div></td>
-      <td width="100"><div align="center"><a href="de/index.html" class="style16">Deutsch</a></div></td>
-    </tr>
-  </table>
-  <table width="800" height="25" border="0" bgcolor="#FFFFFF">
-    <tr>
-      <td>&nbsp;</td>
-    </tr>
-  </table>
-  <table width="800" border="0" bgcolor="#FFFFFF">
-    <tr>
-      <td width="800"><!-- InstanceBeginEditable name="pagecontent" -->
-        <h1 align="center">Frequently Asked Questions</h1>
-        <p align="left"><em><strong>What&rsquo;s a vanos?</strong></em><br />
-          Vanos is BMW&rsquo;s name for its engine variable valve timing unit.<br />
-          <br />
-          <em><strong>What&rsquo;s variable valve timing?</strong></em><br />
-          Variable valve timing is a way of modifying the engine intake and/or exhaust  valve opening/closing timing dynamically to provide improved engine  performance.<br />
-  <a href="http://auto.howstuffworks.com/camshaft.htm">http://auto.howstuffworks.com/camshaft.htm</a><br />
-  <a href="http://www.usautoparts.net/bmw/technology/vanos.htm">http://www.usautoparts.net/bmw/technology/vanos.htm</a><br />
-  <br />
-  <em><strong>What&rsquo;s wrong with my vanos?</strong></em><br />
-        If you own a BMW 6-cylinder single vanos car, engines M50TU, M52, US S50, S52,  1992-1999, or double vanos car, engines M52TU, M54, M56, 1998-2006. , then your  vanos is experiencing a failure. These vanos units utilize engine oil and  pistons/cylinders to manipulate the positioning of gears to facilitate variable  valve timing. The seals on the pistons are leaking due to deteriorating seal  O-rings. This leakage is causing the vanos to fail in its function.<br />
-        <br />
-        <em><strong>Why are the vanos piston O-rings failing?</strong></em><br />
-        The OEM O-rings are made from Buna, and this material is not capable of  resisting the engine temperature and chemical environment. As an outcome the  O-rings are hardening, shrinking, and flattening. This causes them to lose  their functional characteristics causing the vanos to fail.<br />
-        <br />
-        <em><strong>What are the symptoms of a failing vanos?</strong></em><br />
-          Overall loss of torque and power, particularly in the lower RPM range, &lt; 3k.  Bogging then surging at 3k RPM. Uneven power distribution and RPM transition.  Engine hesitations in the lower RPM range, &lt; 3k. Louder idle and  intermittent idle RPM hiccups. Difficult takeoffs. Loss of power and bogging  when AC on. Increased fuel consumption.<br />
-        Double vanos cars with the M52TU engine (98/99-00)  experience cold weather cold start idle jolts and possible stall.<br />
-        <br />
-        <em><strong>What are the benefits of repairing the vanos?</strong></em><br />
-          Overall increase in torque and power, particularly in the lower RPM range, &lt;  3k. Resolution of bogging then surging at 3k RPM. Smooth even distribution of  power and RPM transition. Resolution of engine hesitations in the lower RPM  range, &lt; 3k. Quiet stable idle. Smooth easy takeoffs. Improved performance  when AC on. Reduced fuel consumption, by ~10%.<br />
-          Resolution of double vanos M52TU engine (98/99-00) cold  weather cold start idle jolts and possible stall.<br />
-          <br />
-          <em><strong>How can I verify my vanos is failing?</strong></em><br />
-          On M52TU engine cars (98/99-00) experiencing cold weather cold start idle jolts  and possible stall, the vanos intake solenoid (metal cylinder) electrical  connector can be disconnected. If the idle jolts cease then the problem is most  likely the vanos.<br />
-          On other cars the vanos needs to be removed from the engine for inspection.  Once the vanos cylinder covers are removed, an inspection of the piston seals  fit in the cylinders will show a loose fit and thus a seals failure. Removal of  the seals from the pistons will show the inner O-rings have flat spots and a  loss of elasticity.<br />
-          In general, a diagnosis is not necessary. The vanos Buna  O-rings are deteriorating in 20k miles (32k kilometers). Thus essentially all  the cars with these vanos units have deteriorated O-rings and a failing vanos.<br />
-          <br />
-          <em><strong>Should I install a new vanos?</strong></em><br />
-          A new (rebuilt) BMW vanos costs ~$500 and unfortunately comes with the same  Buna O-rings. Thus the new unit will function well at first, but the O-rings  will begin to deteriorate in short order and the vanos will start failing.<br />
-          <br />
-          <em><strong>Is there a good solution to the vanos problem?</strong></em><br />
-          To correctly address the vanos problem the piston O-rings need to be replaced  with O-rings made from higher grade material. BMW has been engaged on this  subject and has elected to not address the issue, &ldquo;No further development will  be done&rdquo;. <br />
-          To replace the piston O-rings on a vanos requires removing the piston Teflon  seals to access the underneath O-rings. Removing the Teflon seals necessarily  damages them, thus both the O-rings and Teflon seals need to be replaced.  Beisan Systems (www.beisansystems.com) provides vanos seals kits that include  both the upgraded O-rings and Teflon seals. Repair procedures are also provided  for reference.<br />
-          <br />
-          <em><strong>Who can I have perform this repair, and for how much?</strong></em><br />
-          The repair can be performed by a DIY owner with some auto repair experience.  The repair is somewhat involved, but is of moderate difficulty.<br />
-          Any independent BMW mechanic will be able to perform this repair. Labor time  should be 4 hours. Parts include the seals kit, single $30, double $60, a vanos  gasket, $7, and two oil hose washers, $0.50.<br />
-          It&rsquo;s prudent to change the valve cover gaskets during this repair since no  added labor time is needed and the valve cover gaskets and bolt grommets cost  $60.</p>
-        <p align="left">&nbsp;</p>
-      <!-- InstanceEndEditable --></td>
-    </tr>
-  </table>
-  <table width="800" border="0" bgcolor="#FFFFFF">
-    <tr>
-      <td><div align="center">&copy; Copyright 2022 Beisan Systems, LLC</div></td>
-    </tr>
-  </table>
-</div>
+  <div align="center">
+    <table width="800" height="100" border="0" bordercolor="#FFFFFF" background="images/page_header.jpg">
+      <tr>
+        <td> </td>
+      </tr>
+    </table>
+    <table width="800" border="1" bgcolor="#669999">
+      <tr>
+        <td width="100">
+          <div align="center"><a href="index.html" class="style16">Home</a></div>
+        </td>
+        <td width="100">
+          <div align="center"><a href="products.html" class="style16">Products</a></div>
+        </td>
+        <td width="100">
+          <div align="center"><a href="procedures/index.html" class="style16">Procedures</a></div>
+        </td>
+        <td width="100">
+          <div align="center"><a href="testimonials.html" class="style16">Testimonials</a></div>
+        </td>
+        <td width="100">
+          <div align="center"><a href="faq.html" class="style16">FAQ</a></div>
+        </td>
+        <td width="100">
+          <div align="center"><a href="forum.html" class="style16">Forum</a></div>
+        </td>
+        <td width="100">
+          <div align="center"><a href="contact.html" class="style16">Contact</a></div>
+        </td>
+        <td width="100">
+          <div align="center"><a href="de/index.html" class="style16">Deutsch</a></div>
+        </td>
+      </tr>
+    </table>
+    <table width="800" height="25" border="0" bgcolor="#FFFFFF">
+      <tr>
+        <td>&nbsp;</td>
+      </tr>
+    </table>
+    <table width="800" border="0" bgcolor="#FFFFFF">
+      <tr>
+        <td width="800">
+          <!-- InstanceBeginEditable name="pagecontent" -->
+          <h1 align="center">Frequently Asked Questions</h1>
+          <p align="left"><em><strong>What&rsquo;s a vanos?</strong></em><br />
+            Vanos is BMW&rsquo;s name for its engine variable valve timing unit.<br />
+            <br />
+            <em><strong>What&rsquo;s variable valve timing?</strong></em><br />
+            Variable valve timing is a way of modifying the engine intake and/or exhaust valve opening/closing timing
+            dynamically to provide improved engine performance.<br />
+            <a href="http://auto.howstuffworks.com/camshaft.htm">http://auto.howstuffworks.com/camshaft.htm</a><br />
+            <a
+              href="http://www.usautoparts.net/bmw/technology/vanos.htm">http://www.usautoparts.net/bmw/technology/vanos.htm</a><br />
+            <br />
+            <em><strong>What&rsquo;s wrong with my vanos?</strong></em><br />
+            If you own a BMW 6-cylinder single vanos car, engines M50TU, M52, US S50, S52, 1992-1999, or double vanos
+            car, engines M52TU, M54, M56, 1998-2006. , then your vanos is experiencing a failure. These vanos units
+            utilize engine oil and pistons/cylinders to manipulate the positioning of gears to facilitate variable valve
+            timing. The seals on the pistons are leaking due to deteriorating seal O-rings. This leakage is causing the
+            vanos to fail in its function.<br />
+            <br />
+            <em><strong>Why are the vanos piston O-rings failing?</strong></em><br />
+            The OEM O-rings are made from Buna, and this material is not capable of resisting the engine temperature and
+            chemical environment. As an outcome the O-rings are hardening, shrinking, and flattening. This causes them
+            to lose their functional characteristics causing the vanos to fail.<br />
+            <br />
+            <em><strong>What are the symptoms of a failing vanos?</strong></em><br />
+            Overall loss of torque and power, particularly in the lower RPM range, &lt; 3k. Bogging then surging at 3k
+            RPM. Uneven power distribution and RPM transition. Engine hesitations in the lower RPM range, &lt; 3k.
+            Louder idle and intermittent idle RPM hiccups. Difficult takeoffs. Loss of power and bogging when AC on.
+            Increased fuel consumption.<br />
+            Double vanos cars with the M52TU engine (98/99-00) experience cold weather cold start idle jolts and
+            possible stall.<br />
+            <br />
+            <em><strong>What are the benefits of repairing the vanos?</strong></em><br />
+            Overall increase in torque and power, particularly in the lower RPM range, &lt; 3k. Resolution of bogging
+            then surging at 3k RPM. Smooth even distribution of power and RPM transition. Resolution of engine
+            hesitations in the lower RPM range, &lt; 3k. Quiet stable idle. Smooth easy takeoffs. Improved performance
+            when AC on. Reduced fuel consumption, by ~10%.<br />
+            Resolution of double vanos M52TU engine (98/99-00) cold weather cold start idle jolts and possible
+            stall.<br />
+            <br />
+            <em><strong>How can I verify my vanos is failing?</strong></em><br />
+            On M52TU engine cars (98/99-00) experiencing cold weather cold start idle jolts and possible stall, the
+            vanos intake solenoid (metal cylinder) electrical connector can be disconnected. If the idle jolts cease
+            then the problem is most likely the vanos.<br />
+            On other cars the vanos needs to be removed from the engine for inspection. Once the vanos cylinder covers
+            are removed, an inspection of the piston seals fit in the cylinders will show a loose fit and thus a seals
+            failure. Removal of the seals from the pistons will show the inner O-rings have flat spots and a loss of
+            elasticity.<br />
+            In general, a diagnosis is not necessary. The vanos Buna O-rings are deteriorating in 20k miles (32k
+            kilometers). Thus essentially all the cars with these vanos units have deteriorated O-rings and a failing
+            vanos.<br />
+            <br />
+            <em><strong>Should I install a new vanos?</strong></em><br />
+            A new (rebuilt) BMW vanos costs ~$500 and unfortunately comes with the same Buna O-rings. Thus the new unit
+            will function well at first, but the O-rings will begin to deteriorate in short order and the vanos will
+            start failing.<br />
+            <br />
+            <em><strong>Is there a good solution to the vanos problem?</strong></em><br />
+            To correctly address the vanos problem the piston O-rings need to be replaced with O-rings made from higher
+            grade material. BMW has been engaged on this subject and has elected to not address the issue, &ldquo;No
+            further development will be done&rdquo;. <br />
+            To replace the piston O-rings on a vanos requires removing the piston Teflon seals to access the underneath
+            O-rings. Removing the Teflon seals necessarily damages them, thus both the O-rings and Teflon seals need to
+            be replaced. Beisan Systems (www.beisansystems.com) provides vanos seals kits that include both the upgraded
+            O-rings and Teflon seals. Repair procedures are also provided for reference.<br />
+            <br />
+            <em><strong>Who can I have perform this repair, and for how much?</strong></em><br />
+            The repair can be performed by a DIY owner with some auto repair experience. The repair is somewhat
+            involved, but is of moderate difficulty.<br />
+            Any independent BMW mechanic will be able to perform this repair. Labor time should be 4 hours. Parts
+            include the seals kit, single $30, double $60, a vanos gasket, $7, and two oil hose washers, $0.50.<br />
+            It&rsquo;s prudent to change the valve cover gaskets during this repair since no added labor time is needed
+            and the valve cover gaskets and bolt grommets cost $60.
+          </p>
+          <p align="left">&nbsp;</p>
+          <!-- InstanceEndEditable -->
+        </td>
+      </tr>
+    </table>
+    <table width="800" border="0" bgcolor="#FFFFFF">
+      <tr>
+        <td>
+          <div align="center">&copy; Copyright 2022 Beisan Systems, LLC</div>
+        </td>
+      </tr>
+    </table>
+  </div>
 </body>
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+
+</html>
