--- a/contact.html
+++ b/contact.html
@@ -6,53 +6,12 @@
 <head>
   <link rel="shortcut icon" href="/favicon.ico">
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- InstanceBeginEditable name="doctitle" -->
   <title>Beisan Systems - Contact</title>
-  <!-- InstanceEndEditable -->
-  <!-- InstanceBeginEditable name="head" -->
-  <style type="text/css">
-    <!--
-    .style26 {
-      font-size: 16px
-    }
-    -->
-  </style>
-  <!-- InstanceEndEditable -->
-  <style type="text/css">
-    <!--
-    .style16 {
-      color: #FFFFFF
-    }
 
-    .style20 {
-      font-size: 30px;
-      font-style: italic;
-    }
-
-    a:link {
-      text-decoration: none;
-    }
-
-    a:visited {
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    a:active {
-      text-decoration: none;
-    }
-
-    .style23 {
-      color: #FFFFFF;
-      font-size: 46px;
-    }
-    -->
-  </style>
+  <link rel="stylesheet" href="beisan.css">
 </head>
 
 <body>
