--- a/warranty.html
+++ b/warranty.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <title>Beisan Systems - Products - Warranty</title>
+  <link rel="stylesheet" href="beisan.css">
+  
 <style type="text/css">
 <!--
 .style1 {
