fixed the position of the beisan.css file in the subfolders.

--- a/de/faq.html
+++ b/de/faq.html
@@ -12,7 +12,7 @@
   <!-- InstanceEndEditable -->
   <!-- InstanceBeginEditable name="head" -->
   <!-- InstanceEndEditable -->
-  <link rel="stylesheet" href="beisan.css">
+  <link rel="stylesheet" href="../beisan.css">
 
 </head>
 
