--- a/de/produkte.html
+++ b/de/produkte.html
@@ -11,7 +11,7 @@
   <title>Beisan Systems - Produkte</title>
   <!-- InstanceEndEditable -->
   <!-- InstanceBeginEditable name="head" -->
-  <link rel="stylesheet" href="beisan.css">
+  <link rel="stylesheet" href="../beisan.css">
 </head>
 
 <body>
