--- a/de/garantie.html
+++ b/de/garantie.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Untitled Document</title>
-  <link rel="stylesheet" href="beisan.css">
+  <link rel="stylesheet" href="../beisan.css">
 
 </head>
 
