--- a/procedures/index.html
+++ b/procedures/index.html
@@ -12,7 +12,7 @@
   <!-- InstanceEndEditable -->
   <!-- InstanceBeginEditable name="head" -->
   <!-- InstanceEndEditable -->
-  <link rel="stylesheet" href="beisan.css">
+  <link rel="stylesheet" href="../beisan.css">
 
 </head>
 
