Added the article about Rajaie to the German referenzen page

--- a/de/referenzen.html
+++ b/de/referenzen.html
@@ -60,7 +60,7 @@
         <td width="800">
           <!-- InstanceBeginEditable name="pagecontent" -->
           <h1 align="center">Referenzen</h1>
-          <p>&nbsp;</p>
+          <p><img src="../images/articleaboutrajaie.png"></p>
           <p>&nbsp;</p>
           <!-- InstanceEndEditable -->
         </td>
