--- a/testimonials.html
+++ b/testimonials.html
@@ -14,7 +14,12 @@
   <!-- InstanceBeginEditable name="head" -->
   <!-- InstanceEndEditable -->
 
+  
   <link rel="stylesheet" href="beisan.css">
+  
+<script src="js/beisan.js"></script>
+
+  
 
 </head>
 
