--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <!-- InstanceBegin template="/Templates/main.dwt" codeOutsideHTMLIsLocked="false" -->
 
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="/favicon.ico">
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,45 +15,8 @@
   <!-- InstanceEndEditable -->
   <!-- InstanceBeginEditable name="head" -->
   <!-- InstanceEndEditable -->
-  <style type="text/css">
-    <!--
-    .style16 {
-      color: #FFFFFF
-    }
-
-    .style20 {
-      font-size: 30px;
-      font-style: italic;
-    }
-
-    a:link {
-      text-decoration: none;
-    }
-
-    a:visited {
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    a:active {
-      text-decoration: none;
-    }
-
-    .style23 {
-      color: #FFFFFF;
-      font-size: 46px;
-    }
-
-    a.anchorstyle {
-      text-align: center;
-      color:red;
-      width: 800px
-    }
-    -->
-  </style>
+  
+  <link rel="stylesheet" href="beisan.css">
 </head>
 
 <body>
