--- a/procedures/s62_engine_air_intake_procedure.htm
+++ b/procedures/s62_engine_air_intake_procedure.htm
@@ -98,7 +98,7 @@ src="s62_engine_air_intake_procedure_files/image022.jpg"><br>
     <br>
     <br>
   </p>
-  <p>© Copyright 2022 Beisan Systems, LLC</p>
+  <p>" Copyright 2022 Beisan Systems, LLC</p>
 </div>
 </body>
 </html>
